...
                                                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="E-Mail" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="EBQ-yc-Bmh">
                                                    <rect key="frame" x="8" y="15" width="304" height="30"/>
                                                    <accessibility key="accessibilityConfiguration" identifier="LoginEmailField"/>
                                                    <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="14"/>
                                                    <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" keyboardType="emailAddress" keyboardAppearance="alert"/>
...
                                                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Password" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="acZ-ri-yKl">
                                                    <rect key="frame" x="8" y="15" width="304" height="30"/>
                                                    <accessibility key="accessibilityConfiguration" identifier="LoginPasswordField"/>
                                                    <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="14"/>
                                                    <textInputTraits key="textInputTraits" keyboardAppearance="alert" secureTextEntry="YES"/>
...
                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nzc-CI-dTs">
                                                    <rect key="frame" x="0.0" y="0.0" width="320" height="45"/>
                                                    <accessibility key="accessibilityConfiguration" identifier="SignInButton"/>
                                                    <fontDescription key="fontDescription" name="HelveticaNeue-Thin" family="Helvetica Neue" pointSize="14"/>
                                                    <state key="normal" title="Sign in with SoundCloud">
...
                                            </subviews>
                                            <color key="backgroundColor" red="0.5" green="0.5" blue="0.5" alpha="0.59999999999999998" colorSpace="custom" customColorSpace="sRGB"/>
                                            <accessibility key="accessibilityConfiguration" identifier="CommentsView"/>
                                            <constraints>
                                                <constraint firstAttribute="height" id="11t-RA-bee"/>
...
                                            </variation>
                                        </view>
                                        <view clipsSubviews="YES" contentMode="scaleToFill" restorationIdentifier="Wave" translatesAutoresizingMaskIntoConstraints="NO" id="eJS-ZV-h91" userLabel="Wave" customClass="WaveFormView">
                                            <rect key="frame" x="0.0" y="301" width="320" height="60"/>
                                            <subviews>
...
                                        </label>
                                    </subviews>
                                    <accessibility key="accessibilityConfiguration" identifier="VisualeffectView"/>
                                    <constraints>
                                        <constraint firstAttribute="bottom" secondItem="c5I-fT-prQ" secondAttribute="bottom" constant="18" id="0YX-pJ-ff7"/>
...
                <navigationController storyboardIdentifier="ContentNavigationController" automaticallyAdjustsScrollViewInsets="NO" id="0ms-bu-pyz" customClass="ContentNavigationViewController" sceneMemberID="viewController">
                    <extendedEdge key="edgesForExtendedLayout"/>
                    <tabBarItem key="tabBarItem" title="Stream" image="cloud" id="xBq-Zy-zcm"/>
                    <toolbarItems/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" translucent="NO" id="7ud-ar-odw">
...
