...
"PROFILE_TABBAR_FOLLOWINGS_TITLE" = "%@ Followings";

/* About Page */
"ABOUT_PAGE_GET_SOUNDROCKET_PRO_LABEL" = "Soundrocket Pro";

/* COMMENTS PAGE */
"COMMENTS_PAGE_COMMENTS_TITLE" = "Comments";

