...
                            </userDefinedRuntimeAttributes>
                        </constraint>
                    </constraints>
                </view>
            </subviews>
            <color key="backgroundColor" white="0.25" alpha="0.0" colorSpace="custom" customColorSpace="calibratedWhite"/>
            <accessibility key="accessibilityConfiguration" identifier="Miniplayer"/>
            <constraints>
                <constraint firstAttribute="centerY" secondItem="eM7-sE-wBS" secondAttribute="centerY" id="0iI-S4-aLf"/>
                <constraint firstAttribute="trailing" secondItem="EZn-b1-w83" secondAttribute="trailing" id="7ly-38-P41"/>
                <constraint firstItem="QAC-QE-QzI" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="85f-Uu-t9E"/>
                <constraint firstItem="5u5-IR-Mew" firstAttribute="bottom" secondItem="UWb-Ju-D7a" secondAttribute="bottom" constant="-2" id="DWC-Cs-L1m"/>
                <constraint firstItem="eM7-sE-wBS" firstAttribute="leading" secondItem="A1c-gi-udb" secondAttribute="trailing" constant="25" id="E33-0h-dCc"/>
...
